Add Display done

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -14,7 +14,8 @@
     <input id="score" name="score" />
     <button id="addScore">Add Score</button>
     <div id="todosContainer" class="todos"></div>
-    <div id="demo"></div>
+    <!--<button id="deleteButton">Delete Score</button>-->
+    <ol id="demo"></ol>
 </body>
 
 </html>
