Delete Button Works

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -16,7 +16,15 @@
     <div id="todosContainer" class="todos"></div>
 
     <input type="button" value="Sort asc" id="sortButton"></input> 
-    <ol id="demo"></ol>
+<ol id="demo"></ol>
+    
+<table id="studentTable">
+    <thead>
+    <td style="width: 300px;">Name</td>
+    <td style="width: 300px;">Score</td>
+    </thead>
+    <tbody></tbody>
+</table>
 </body>
 
 </html>
