High Score Show

--- a/Snake game/src/public/index.html
+++ b/Snake game/src/public/index.html
@@ -5,7 +5,19 @@
     <link rel="stylesheet" href="snake.css">
 </head>
     <body>
+        <span>
+            <p>Score:</p>
+            <p id="lblScore"></p>
+        </span>
+        <span>
+            <p>High Score:</p>
+            <p id="highScore"></p>
+        </span>    
+
         <button id='start-btn'>START</button>
+
+        <button id='pause-btn'>Pause</button>
+        <button id='resume-btn'>Resume</button>
         <br>
         <canvas id='mycanvas' width='350' height='350'>
         </canvas>
